test: test `AutoPipelineProcessor` using lib `kotlin-compile-testing`