@@ -58,8 +58,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.github.jbock-java</groupId>
-			<artifactId>compile-testing</artifactId>
+			<groupId>com.github.tschuchortdev</groupId>
+			<artifactId>kotlin-compile-testing</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -98,6 +98,35 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>add-java-open-options-for-jdk16</id>
+			<activation>
+				<jdk>[16,)</jdk>
+			</activation>
+			<properties>
+				<!--
+					Java 16 compatibility - kotlin-compile-testing
+					https://github.com/tschuchortdev/kotlin-compile-testing#java-16-compatibility
+
+					Maven Surefire Plugin – surefire:test
+						https://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#argLine
+					Append the value of argLine param in maven-surefire-plugin
+						https://stackoverflow.com/questions/46489455
+				-->
+				<argLine>
+					--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+					--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+				</argLine>
+			</properties>
 		</profile>
 	</profiles>
 </project>
